# tinker-cookbook-arisohn

tinker_cookbook/distillation/: description.md  diff.md  lab.md  pyproject.toml  tinther.py  train_off_policy_tinther.py  train_on_policy_tinther.py  train_sft_tinther.py
trl/: run_sft.sh  train_sft.py
